# Engine

./: .gitmodules  CMakeLists.txt
ext/: CMakeLists.txt
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/include/chk/common/: arena.h  common.h  fmt.h  input.h  log.h  types.h
lib/common/src/: fmt.c  log.c
lib/opengl/: CMakeLists.txt
lib/opengl/include/chk/opengl/: opengl.h
lib/opengl/src/: loader.c  opengl.c
lib/renderer/: CMakeLists.txt
lib/renderer/include/chk/renderer/: color.h  renderer.h
lib/renderer/src/: color.c  renderer.c
lib/window/: CMakeLists.txt
lib/window/include/chk/opengl/: gl.h  khrplatform.h
lib/window/include/chk/window/: window.h
lib/window/include/chk/window/win32/: window.h
lib/window/src/: gl.c  input.c  window.c
lib/window/src/win32/: window.c
